[package]
name = "catalog_manifest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "catalog-manifest"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
clap = {version="*", features=["derive"]}
indexmap = { version = "*", features = ["serde"] }
expect-test = "*"
url = "2.4.1"
anyhow = {version = "1.0.75", features=["backtrace"]}

[dev-dependencies]
expect-test = "*"
